launcher: avoid Java 9+ APIs